--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,8 @@ dependencies {
 
     testImplementation 'org.mockito:mockito-core:3.9.0'
 
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
 
 
 
