--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
@@ -96,6 +97,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.9.0'
 
     implementation 'org.greenrobot:eventbus:3.2.0'
+
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.5.7'
 
 
 
