implementei os primeiros testes do FragmentListaMedicamentos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
 
     //maskara https://github.com/santalu/maskara
     implementation 'com.github.santalu:maskara:1.0.0'
@@ -67,6 +69,7 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.5.3"
 
     def room_version = "2.5.1"
 
@@ -98,7 +101,13 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.2.0'
 
-    androidTestImplementation 'androidx.fragment:fragment-testing:1.5.7'
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.7'
+
+
+    androidTestImplementation 'org.hamcrest:hamcrest-library:2.2'
+
+    debugImplementation 'androidx.test:core:1.5.0'
+
 
 
 
