--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
