--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
 
+    androidTestImplementation 'androidx.test.ext:junit-gtest:1.0.0-alpha02'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+
+
+
     //maskara https://github.com/santalu/maskara
     implementation 'com.github.santalu:maskara:1.0.0'
 
