--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
@@ -125,6 +128,12 @@ dependencies {
     debugImplementation 'androidx.test:core:1.5.0'
 
     implementation 'com.google.code.gson:gson:2.8.8'
+
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+
+
+
+
 
 
 
